Replace specific content with placeholders
Updated various sections with placeholder text.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       <div class="head-text">
         <h1>Yael Shechter</h1>
         <div class="subtitle">
-          Security-curious software engineer from Tel Aviv, slowly drifting into research.
+          Security-curious software engineer, slowly drifting into research.
         </div>
         <div class="tags">
           <span class="tag"><span class="tag-dot"></span>binary exploitation</span>
@@ -369,22 +369,19 @@
 
           <li class="writeup-item">
             <div class="writeup-title-row">
-              <div class="writeup-title">Dynamic loader rabbit hole</div>
+              <div class="writeup-title">Placeholder</div>
               <div class="writeup-meta">
                 <span class="chip">ELF</span>
               </div>
             </div>
             <div class="writeup-desc">
-              Notes from digging into PLT, GOT, relocations and what really
-              happens before your function ever runs.
+              placeholder
             </div>
           </li>
         </ul>
 
         <p style="font-size:13px; margin-top:12px; color:var(--text-muted);">
           The list above will grow as I migrate more writeups into this space.
-          If you are reviewing my CV and want to see something specific, feel free
-          to reach out.
         </p>
       </section>
 
@@ -393,17 +390,14 @@
         <div class="side-card-section">
           <h3>What I enjoy breaking</h3>
           <p>
-            Mostly binaries and infrastructure things. I like understanding how
-            components are glued together and where assumptions leak.
+            placeholder
           </p>
         </div>
 
         <div class="side-card-section">
           <h3>Currently learning</h3>
           <p>
-            Deepening my binary exploitation skills, exploring cloud security
-            misconfigurations and writing more structured research notes
-            instead of keeping everything in random terminals.
+            placeholder
           </p>
         </div>
 
@@ -427,7 +421,7 @@
         </div>
 
         <div class="side-card-section">
-          <h3>When I am not poking binaries</h3>
+          <h3>Hobbies</h3>
           <p>
             I play piano, run in weird weather, learn languages and try not to
             adopt more dogs than I can reasonably walk.
