--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <meta charset="UTF-8" />
-  <title>Yael Shechter – Security Research</title>
+  <title>Yael Shechter - Security Research</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -342,9 +342,22 @@
         <h3 style="font-size:14px; margin:12px 0 6px;">Featured writeups</h3>
         <ul class="writeups-list">
           <!-- example entries, replace links and text when you add real writeups -->
+            <li class="writeup-item">
+                <div class="writeup-title-row">
+                    <a href="pwnable-fd.html" class="writeup-title">Pwnable.kr - fd</a>
+                    <div class="writeup-meta">
+                        <span class="chip">shellcode</span>
+                    </div>
+                </div>
+                <div class="writeup-desc">
+                    Hand-crafted shellcode, stack layout, and some friendly wrestling
+                    with execve. Focus on how tiny details in registers change everything.
+                </div>
+            </li>
+
           <li class="writeup-item">
             <div class="writeup-title-row">
-              <div class="writeup-title">Pwnable.kr – asm</div>
+              <div class="writeup-title">Pwnable.kr - asm</div>
               <div class="writeup-meta">
                 <span class="chip">shellcode</span>
               </div>
