--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       <!-- left side -->
       <section class="card">
         <div class="section-title-row">
-          <h2>Security research notes and writeups</h2>
+          <h2>CTF Writeups</h2>
           <span>
             <span class="tiny-dot-row">
               <span class="tiny-dot"></span><span class="tiny-dot"></span><span class="tiny-dot"></span>
@@ -357,7 +357,7 @@
 
           <li class="writeup-item">
             <div class="writeup-title-row">
-              <div class="writeup-title">Pwnable.kr - asm</div>
+              <a href="pwnable-asm.html" class="writeup-title">Pwnable.kr - asm</a>
               <div class="writeup-meta">
                 <span class="chip">shellcode</span>
               </div>
