--- a/pwnable-asm.html
+++ b/pwnable-asm.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>pwnable.kr – asm</title>
+    <title>pwnable.kr - asm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         :root {
