--- a/index.html
+++ b/index.html
@@ -437,8 +437,7 @@
         <div class="side-card-section">
           <h3>Hobbies</h3>
           <p>
-            I play piano, run in weird weather, learn languages and try not to
-            adopt more dogs than I can reasonably walk.
+            Placeholder
           </p>
         </div>
       </aside>
