--- a/pwnable-asm.html
+++ b/pwnable-asm.html
@@ -114,6 +114,11 @@
             padding: 0;
         }
 
+        pre, pre code {
+            white-space: pre-wrap;
+            word-break: break-word;
+        }
+
         ul {
             padding-left: 18px;
             margin: 6px 0 14px;
@@ -201,13 +206,10 @@
                 <div class="tag">Points: 6</div>
                 <div class="tag">Host: pwnable.kr</div>
             </div>
-            <img src="images/asm.png" alt="asm challenge screenshot" class="header-image" />
+            <img src="images/meme.png" alt="asm meme" class="meme-image" />
         </header>
 
         <article>
-            <p><strong>Track</strong>: Toddler's Bottle</p>
-            <p><strong>Points</strong>: 6</p>
-            <p><strong>Host</strong>: <code>pwnable.kr</code></p>
 
             <hr />
 
@@ -564,8 +566,6 @@ Mak1ng_5helLcodE_i5_veRy_eaSy
                 <li>A shellcode database: <a href="https://shell-storm.org/shellcode/index.html" target="_blank" rel="noreferrer">https://shell-storm.org/shellcode/index.html</a></li>
                 <li>Nice Introduction to shellcode: <a href="https://www.youtube.com/watch?v=715v_-YnpT8" target="_blank" rel="noreferrer">https://www.youtube.com/watch?v=715v_-YnpT8</a></li>
             </ul>
-
-            <img src="images/meme.png" alt="asm meme" class="meme-image" />
         </article>
     </div>
 </div>
