--- a/index.html
+++ b/index.html
@@ -332,14 +332,11 @@
                 <!--                <span class="pill">reading way too many docs</span>-->
             </div>
 
-<!--            <h3 style="font-size:14px; margin:12px 0 6px;">Featured writeups</h3>-->
             <ul class="writeups-list">
-                <!-- example entries, replace links and text when you add real writeups -->
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <a href="pwnable-fd.html" class="writeup-title">Pwnable.kr - fd</a>
+                        <a href="pwnable-fd.html" class="writeup-title">Pwnable Writeup - fd</a>
                         <div class="writeup-meta">
-<!--                            <span class="chip">shellcode</span>-->
                         </div>
                     </div>
                     <div class="writeup-desc">
@@ -350,8 +347,16 @@
                     <div class="writeup-title-row">
                         <a href="pwnable-asm.html" class="writeup-title">Pwnable.kr - asm</a>
                         <div class="writeup-meta">
-                            <!--                            <span class="chip">shellcode</span>-->
                         </div>
+                    </div>
+                    <div class="writeup-desc">
+                    </div>
+                </li>
+
+                <li class="writeup-item">
+                    <div class="writeup-title-row">
+                        <a href="pwnable-uaf.html" class="writeup-title">Pwnable.kr - uaf</a>
+                        <div class="writeup-meta"></div>
                     </div>
                     <div class="writeup-desc">
                     </div>
@@ -404,6 +409,12 @@
             <div class="side-card-section">
                 <h3>Links</h3>
                 <ul class="link-list">
+                    <li>
+                        LinkedIn:
+                        <a href="https://www.linkedin.com/in/yaelshechter/" target="_blank" rel="noreferrer">
+                            Yael Shechter
+                        </a>
+                    </li>
                     <li>
                         GitHub:
                         <a href="https://github.com/yaelshechter" target="_blank" rel="noreferrer">
