--- a/pwnable-fd.html
+++ b/pwnable-fd.html
@@ -172,9 +172,9 @@
                 <a href="https://pwnable.kr" target="_blank" rel="noreferrer">pwnable.kr</a>.
             </div>
             <div class="tag-row">
-                <div class="tag">Memory Management</div>
-                <div class="tag">file descriptors</div>
-                <div class="tag">linux io</div>
+                <div class="tag">Toddler's Bottle</div>
+                <div class="tag">Points: 1</div>
+                <div class="tag">Host: pwnable.kr</div>
             </div>
         </header>
 
