--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <ul class="writeups-list">
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <a href="pwnable-fd.html" class="writeup-title">Pwnable Writeup - fd</a>
+                        <a href="pwnable-fd.html" class="writeup-title">pwnable.kr - fd</a>
                         <div class="writeup-meta">
                         </div>
                     </div>
@@ -345,7 +345,7 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <a href="pwnable-asm.html" class="writeup-title">Pwnable.kr - asm</a>
+                        <a href="pwnable-asm.html" class="writeup-title">pwnable.kr - asm</a>
                         <div class="writeup-meta">
                         </div>
                     </div>
@@ -355,7 +355,7 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <a href="pwnable-uaf.html" class="writeup-title">Pwnable.kr - uaf</a>
+                        <a href="pwnable-uaf.html" class="writeup-title">pwnable.kr - uaf</a>
                         <div class="writeup-meta"></div>
                     </div>
                     <div class="writeup-desc">
