--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
     </style>
 </head>
 <body>
+<script src="js/oneko.js"></script>
+
 <div class="page">
     <header>
         <div class="avatar">
