--- a/index.html
+++ b/index.html
@@ -366,9 +366,8 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <div class="writeup-title">ascii_easy</div>
+                        <div class="writeup-title">pwnable.kr - ascii_easy</div>
                         <div class="writeup-meta">
-                            <!--                            <span class="chip">ROP</span>-->
                         </div>
                     </div>
                     <div class="writeup-desc">
@@ -377,13 +376,20 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <div class="writeup-title">Placeholder</div>
+                        <div class="writeup-title">pwnable.kr - unlink</div>
                         <div class="writeup-meta">
-                            <span class="chip">ELF</span>
                         </div>
                     </div>
                     <div class="writeup-desc">
-                        placeholder
+                    </div>
+                </li>
+
+                <li class="writeup-item">
+                    <div class="writeup-title-row">
+                        <a href="pwnable-uaf.html" class="writeup-title">pwnable.kr - tiny_easy</a>
+                        <div class="writeup-meta"></div>
+                    </div>
+                    <div class="writeup-desc">
                     </div>
                 </li>
             </ul>
