--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <div class="writeup-title">pwnable.kr - ascii_easy</div>
+                        <div class="writeup-title">pwnable.kr - ascii_easy (WIP)</div>
                         <div class="writeup-meta">
                         </div>
                     </div>
@@ -376,7 +376,7 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <div class="writeup-title">pwnable.kr - unlink</div>
+                        <div class="writeup-title">pwnable.kr - unlink (WIP)</div>
                         <div class="writeup-meta">
                         </div>
                     </div>
@@ -386,7 +386,7 @@
 
                 <li class="writeup-item">
                     <div class="writeup-title-row">
-                        <a href="pwnable-uaf.html" class="writeup-title">pwnable.kr - tiny_easy</a>
+                        <div class="writeup-title">pwnable.kr - tiny_easy (WIP)</div>
                         <div class="writeup-meta"></div>
                     </div>
                     <div class="writeup-desc">
@@ -400,20 +400,6 @@
 
         <!-- right side -->
         <aside class="card">
-<!--            <div class="side-card-section">-->
-<!--                <h3>What I enjoy breaking</h3>-->
-<!--                <p>-->
-<!--                    placeholder-->
-<!--                </p>-->
-<!--            </div>-->
-
-<!--            <div class="side-card-section">-->
-<!--                <h3>Currently learning</h3>-->
-<!--                <p>-->
-<!--                    placeholder-->
-<!--                </p>-->
-<!--            </div>-->
-
             <div class="side-card-section">
                 <h3>Links</h3>
                 <ul class="link-list">
