--- a/index.html
+++ b/index.html
@@ -416,20 +416,22 @@
                         </a>
                     </li>
                     <li>
-                        Email:
-                        <a href="mailto:yael@example.com">
-                            yael@example.com
-                        </a>
+<!--                        Email:-->
+<!--                        <a href="mailto:yael@example.com">-->
+<!--                            yael.sh84 at gmail.com-->
+<!--                        </a>-->
                         <!-- replace with real address -->
                     </li>
                 </ul>
             </div>
 
             <div class="side-card-section">
-                <h3>Hobbies</h3>
-                <p>
-                    Placeholder
-                </p>
+<!--                <h3>Hobbies</h3>-->
+<!--                <p>-->
+<!--                    - Playing piano-->
+<!--                    - Walking with my dog, Dobby-->
+<!--                    - -->
+<!--                </p>-->
             </div>
         </aside>
     </main>
