--- a/pwnable-fd.html
+++ b/pwnable-fd.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <title>pwnable.kr - fd</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+
+    <!-- syntax highlighting (only affects code blocks we mark with language-*) -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script defer>
+        window.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll("pre code.language-c, pre code.language-python, pre code.language-bash")
+                .forEach((el) => window.hljs && hljs.highlightElement(el));
+        });
+    </script>
+
     <style>
         :root {
             --bg: #f7f5ff;
@@ -195,7 +208,7 @@ ssh fd@pwnable.kr -p2222
 
             <p>Opening <code>fd.c</code> shows:</p>
 
-            <pre><code>#include &lt;stdio.h&gt;
+            <pre><code class="language-c">#include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;string.h&gt;
 char buf[32];
